# DocumentPy

./: .gitignore  README.md  pyproject.toml
documentpy/: __init__.py  __main__.py  comparator.py  document.py  utils.py
examples/: Dockerfile  README.md  code_npm.py  docker.py  example_npm.py
